优化Redis 缓存算法