@@ -6,9 +6,7 @@ import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.data.redis.core.ZSetOperations;
 import org.springframework.stereotype.Service;
 
-import java.util.List;
-import java.util.Objects;
-import java.util.Set;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
@@ -17,28 +15,92 @@ public class RedisService {
     private final RedisTemplate<String, Object> redisTemplate;
     private static final String HOT_KNOWLEDGE_KEY = "hot_knowledge";
     private static final String KNOWLEDGE_DATA_KEY = "knowledge_data:";
-    private static final int MAX_HOT_ITEMS = 20;
+    private static final String KEYWORD_INDEX_KEY = "keyword_index:";
+    private static final double HOT_THRESHOLD = 5.0;
+    private static final int MAX_KEYWORDS_PER_DOC = 10; // 每个文档最多索引的关键词数量
 
     public void saveDocToRedis(KnowledgeBase knowledge) {
-        // 更新热门知识分数
-        redisTemplate.opsForZSet().incrementScore(HOT_KNOWLEDGE_KEY, knowledge.getId().toString(), 1);
-        // 存储完整知识数据
-        redisTemplate.opsForValue().set(KNOWLEDGE_DATA_KEY + knowledge.getId(), knowledge);
+        String docId = knowledge.getId().toString();
+        
+        // 1. 更新热门知识分数
+        redisTemplate.opsForZSet().incrementScore(HOT_KNOWLEDGE_KEY, docId, 1);
+        
+        // 2. 存储完整知识数据
+        redisTemplate.opsForValue().set(KNOWLEDGE_DATA_KEY + docId, knowledge, java.time.Duration.ofDays(7));
+        
+        // 3. 更新关键词索引
+        updateKeywordIndex(knowledge);
     }
 
-    public void incrementKnowledgeScore(String knowledgeId){
+    private void updateKeywordIndex(KnowledgeBase knowledge) {
+        String docId = knowledge.getId().toString();
+        
+        // 从标题和内容中提取关键词
+        Set<String> keywords = extractKeywords(knowledge.getTitle() + " " + knowledge.getContent());
+        
+        // 为每个关键词创建索引
+        for (String keyword : keywords) {
+            String keywordKey = KEYWORD_INDEX_KEY + keyword.toLowerCase();
+            redisTemplate.opsForZSet().add(keywordKey, docId, 1);
+        }
+    }
+
+    private Set<String> extractKeywords(String text) {
+        // 简单的关键词提取：分词并过滤停用词
+        return Arrays.stream(text.toLowerCase().split("\\s+"))
+                .filter(word -> word.length() > 2) // 过滤短词
+                .limit(MAX_KEYWORDS_PER_DOC)
+                .collect(Collectors.toSet());
+    }
+
+    public void incrementKnowledgeScore(String knowledgeId) {
         redisTemplate.opsForZSet().incrementScore(HOT_KNOWLEDGE_KEY, knowledgeId, 1);
+    }
+
+    public List<KnowledgeBase> searchKnowledge(String query) {
+        if (query == null || query.trim().isEmpty()) {
+            return Collections.emptyList();
+        }
+
+        String[] searchTerms = query.toLowerCase().split("\\s+");
+        Set<String> matchedDocIds = new HashSet<>();
+        
+        // 1. 首先检查关键词索引
+        for (String term : searchTerms) {
+            String keywordKey = KEYWORD_INDEX_KEY + term;
+            Set<Object> docIds = redisTemplate.opsForZSet().range(keywordKey, 0, -1);
+            if (docIds != null) {
+                matchedDocIds.addAll(docIds.stream()
+                        .map(Object::toString)
+                        .collect(Collectors.toSet()));
+            }
+        }
+
+        // 2. 如果找到匹配的文档，直接返回
+        if (!matchedDocIds.isEmpty()) {
+            return matchedDocIds.stream()
+                    .map(docId -> (KnowledgeBase) redisTemplate.opsForValue().get(KNOWLEDGE_DATA_KEY + docId))
+                    .filter(Objects::nonNull)
+                    .collect(Collectors.toList());
+        }
+
+        // 3. 如果没有找到匹配的文档，返回热门知识
+        return getHotKnowledge();
     }
 
     public List<KnowledgeBase> getHotKnowledge() {
         Set<ZSetOperations.TypedTuple<Object>> hotItems = redisTemplate.opsForZSet()
-                .reverseRangeWithScores(HOT_KNOWLEDGE_KEY, 0, MAX_HOT_ITEMS - 1);
+                .reverseRangeWithScores(HOT_KNOWLEDGE_KEY, 0, -1);
         
         if (hotItems == null) {
-            return List.of();
+            return Collections.emptyList();
         }
 
         return hotItems.stream()
+                .filter(tuple -> {
+                    Double score = tuple.getScore();
+                    return score != null && score >= HOT_THRESHOLD;
+                })
                 .map(tuple -> {
                     String id = Objects.requireNonNull(tuple.getValue()).toString();
                     return (KnowledgeBase) redisTemplate.opsForValue().get(KNOWLEDGE_DATA_KEY + id);
@@ -48,12 +110,50 @@ public class RedisService {
     }
 
     public void removeExpiredHotKnowledge() {
-        // 每天凌晨执行，保留最近24小时的数据
-        redisTemplate.delete(HOT_KNOWLEDGE_KEY);
-        // 删除所有知识数据
-        Set<String> keys = redisTemplate.keys(KNOWLEDGE_DATA_KEY + "*");
-        if (!keys.isEmpty()) {
-            redisTemplate.delete(keys);
+        // 获取所有热门知识及其分数
+        Set<ZSetOperations.TypedTuple<Object>> allItems = redisTemplate.opsForZSet()
+                .rangeWithScores(HOT_KNOWLEDGE_KEY, 0, -1);
+        
+        if (allItems == null) {
+            return;
+        }
+
+        // 保留访问次数超过阈值的数据
+        allItems.stream()
+                .filter(tuple -> {
+                    Double score = tuple.getScore();
+                    return score != null && score >= HOT_THRESHOLD;
+                })
+                .forEach(tuple -> {
+                    String id = Objects.requireNonNull(tuple.getValue()).toString();
+                    // 更新热门知识的过期时间
+                    redisTemplate.expire(KNOWLEDGE_DATA_KEY + id, java.time.Duration.ofDays(7));
+                });
+
+        // 删除访问次数低于阈值的数据
+        allItems.stream()
+                .filter(tuple -> {
+                    Double score = tuple.getScore();
+                    return score == null || score < HOT_THRESHOLD;
+                })
+                .forEach(tuple -> {
+                    String id = Objects.requireNonNull(tuple.getValue()).toString();
+                    // 删除知识数据
+                    redisTemplate.delete(KNOWLEDGE_DATA_KEY + id);
+                    // 从热门知识集合中删除
+                    redisTemplate.opsForZSet().remove(HOT_KNOWLEDGE_KEY, id);
+                    // 删除相关的关键词索引
+                    deleteKeywordIndex(id);
+                });
+    }
+
+    private void deleteKeywordIndex(String docId) {
+        // 获取所有关键词索引键
+        Set<String> keywordKeys = redisTemplate.keys(KEYWORD_INDEX_KEY + "*");
+        if (keywordKeys != null) {
+            for (String key : keywordKeys) {
+                redisTemplate.opsForZSet().remove(key, docId);
+            }
         }
     }
 } 
